vpc.tf
resource "aws_vpc" "default_vpc" {
  cidr_block           = var.vpc_cidr
  enable_dns_support   = true
  enable_dns_hostnames = true
  tags                 = var.tags
}

resource "aws_subnet" "private_subnet" {
  vpc_id                  = aws_vpc.default_vpc.id
  cidr_block              = "10.0.1.0/24"
  availability_zone       = "ap-south-1a"
  map_public_ip_on_launch = true
}

# Internet Gateway for the VPC
resource "aws_internet_gateway" "public_igw" {
    vpc_id = aws_vpc.default_vpc.id
    tags   = var.tags
}

resource "aws_route_table" "public_rt" {
    vpc_id = aws_vpc.default_vpc.id
    route {
        cidr_block = "0.0.0.0/0"
        gateway_id = aws_internet_gateway.public_igw.id
    }
}

resource "aws_route_table_association" "public_rt_assoc" {
    subnet_id      = aws_subnet.private_subnet.id
    route_table_id = aws_route_table.public_rt.id
}
